# dynamodel

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
dynamodel/: Cargo.toml
dynamodel/src/: lib.rs
dynamodel_derive/: Cargo.toml
dynamodel_derive/src/: case.rs  getter.rs  lib.rs  setter.rs  types.rs  utils.rs
dynamodel_derive/src/enum_impl/: getter.rs  setter.rs
dynamodel_derive/src/impls/: enums.rs  mod.rs  structs.rs
dynamodel_derive/src/struct_impl/: mod.rs  setter.rs
dynamodel_tests/: Cargo.toml
dynamodel_tests/tests/: compile_err.rs  extra.rs  fields.rs  rename_all.rs  rename_field.rs  table_key.rs  test_attributes.rs  test_compile.rs  test_enum_named.rs  test_enum_newtype.rs  test_enums.rs  test_fields.rs  test_structs.rs
dynamodel_tests/tests/attribute/: mod.rs  simple.rs
dynamodel_tests/tests/attributes/container/: extra.rs
dynamodel_tests/tests/attributes/field/: skip_into_and_try_from_item.rs
dynamodel_tests/tests/bool/: opt.rs  simple.rs
dynamodel_tests/tests/enum_named/attributes/container/: rename_all.rs  tag.rs
dynamodel_tests/tests/enum_named/attributes/variant/: rename.rs
dynamodel_tests/tests/enum_named/fields/bool/: opt.rs  simple.rs
dynamodel_tests/tests/enum_named/fields/inner_struct/: simple.rs  vec.rs
dynamodel_tests/tests/enum_named/fields/number/: vec.rs
dynamodel_tests/tests/enum_named/fields/string/: opt.rs
dynamodel_tests/tests/enum_newtype/: mod.rs
dynamodel_tests/tests/enum_newtype/attributes/: mod.rs
dynamodel_tests/tests/enum_newtype/attributes/container/: mod.rs  rename_all.rs  tag.rs
dynamodel_tests/tests/enum_newtype/fields/: mod.rs
dynamodel_tests/tests/enums/: externally_tagged.rs  internally_tagged.rs  mod.rs
dynamodel_tests/tests/enums/attributes/: mod.rs
dynamodel_tests/tests/fails/: enum_newtype.stderr  enum_tuple.rs  enum_tuple.stderr  enum_unit.rs  enum_unit.stderr  not_a_struct.stderr  struct_newtype.rs  struct_newtype.stderr  struct_tuple.stderr  struct_unit.stderr  unnamed_fields.rs  unnamed_fields.stderr
dynamodel_tests/tests/fails/attribute/: both_try_from_and_try_from_item.stderr  invalid_def.rs  invalid_def.stderr  invalid_extra.rs  invalid_extra.stderr  invalid_name.rs  invalid_name.stderr  invalid_rename_all.rs  invalid_rename_all.stderr  invalid_table_key.rs  invalid_table_key.stderr
dynamodel_tests/tests/inner_struct/: opt.rs
dynamodel_tests/tests/macros/: mod.rs
dynamodel_tests/tests/number/: simple.rs
dynamodel_tests/tests/string/: opt.rs  vec.rs
dynamodel_tests/tests/structs/attributes/: mod.rs
dynamodel_tests/tests/ui/fails/: enum_newtype.rs  enum_newtype.stderr  enum_newtype_optional.rs  enum_newtype_optional.stderr  enum_newtype_tagged.rs  enum_newtype_tagged.stderr  enum_tuple.stderr  enum_unit.stderr  not_a_struct.rs  not_a_struct.stderr  struct_newtype.stderr  struct_tuple.rs  struct_tuple.stderr  struct_unit.rs  struct_unit.stderr  unnamed_fields.stderr
dynamodel_tests/tests/ui/passes/: generics.rs
(+44 files in other folders)
