[package]
name = "dynamodel"
version = "0.3.1"
authors = ["Kanji Tanaka <sumireminami@gmail.com"]
license = "MIT"
description = "This library provides a derive macro to implement conversions between your object and `HashMap<String, AttributeValue>`."
homepage = "https://github.com/kaicoh/dynamodel"
repository = "https://github.com/kaicoh/dynamodel"
keywords = ["dynamodb", "aws"]
edition = "2021"
readme = "../README.md"

[dependencies]
dynamodel_derive = { version = "0.3", path = "../dynamodel_derive" }
aws-sdk-dynamodb = { workspace = true }
thiserror = "1"
