[package]
name = "dynamodel"
version = "0.6.0"
authors = ["Kanji Tanaka <sumireminami@gmail.com"]
license = "MIT"
description = "This library provides a derive macro to implement conversions between your object and `HashMap<String, AttributeValue>`."
homepage = "https://github.com/kaicoh/dynamodel"
repository = "https://github.com/kaicoh/dynamodel"
documentation = "https://docs.rs/dynamodel"
keywords = ["dynamodb", "aws", "derive"]
edition = "2024"
readme = "../README.md"

[dependencies]
dynamodel_derive = { version = "0.6.0", path = "../dynamodel_derive" }
aws-sdk-dynamodb = { workspace = true }
thiserror = "1"

[dev-dependencies]
paste = { workspace = true }
