[package]
name = "dynamodel_derive"
version = "0.6.0"
authors = ["Kanji Tanaka <sumireminami@gmail.com"]
license = "MIT"
description = "Macros 1.1 implementation of #[derive(Dynamodel)]"
homepage = "https://github.com/kaicoh/dynamodel"
repository = "https://github.com/kaicoh/dynamodel"
documentation = "https://docs.rs/dynamodel"
keywords = ["dynamodb", "aws", "derive"]
edition = "2024"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
proc-macro-error = "1"
quote = "1"
syn = "2"
paste = { workspace = true }
darling = "0.20"
